--- a/OPSC7311POE/app/src/main/AndroidManifest.xml
+++ b/OPSC7311POE/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.OPSC7311POE"
         tools:targetApi="31">
         <activity
+            android:name=".WeeklySummary"
+            android:exported="false" />
+
+        <activity
+            android:name=".Timer"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
