--- a/OPSC7311POE/local.properties
+++ b/OPSC7311POE/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 19 16:39:29 SAST 2024
-sdk.dir=C\:\\Users\\allan\\AppData\\Local\\Android\\Sdk
+#Thu Apr 25 17:24:09 SAST 2024
+sdk.dir=C\:\\Users\\reill\\AppData\\Local\\Android\\Sdk
