--- a/OPSC7311POE/app/src/main/AndroidManifest.xml
+++ b/OPSC7311POE/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/Theme.OPSC7311POE"
         tools:targetApi="31">
         <activity
+            android:name=".Profile"
+            android:exported="false" />
+        <activity
             android:name=".WeeklySummary"
             android:exported="false" />
-
         <activity
             android:name=".Timer"
             android:exported="false" />
