--- a/OPSC7311POE/app/src/main/AndroidManifest.xml
+++ b/OPSC7311POE/app/src/main/AndroidManifest.xml
@@ -13,16 +13,19 @@
         android:theme="@style/Theme.OPSC7311POE"
         tools:targetApi="31">
         <activity
-            android:name=".GraphView"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".StartingPage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Login">
+
+        </activity>
+        <activity android:name=".Register">
+
         </activity>
     </application>
 
