--- a/OPSC7311POE/local.properties
+++ b/OPSC7311POE/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 29 13:54:19 SAST 2024
-sdk.dir=C\:\\Users\\Sven\\AppData\\Local\\Android\\Sdk
+#Mon Apr 29 17:31:18 SAST 2024
+sdk.dir=C\:\\Users\\allan\\AppData\\Local\\Android\\Sdk
