--- a/OPSC7311POE/app/src/main/AndroidManifest.xml
+++ b/OPSC7311POE/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <activity android:name=".Login" />
         <activity android:name=".Register" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
