--- a/OPSC7311POE/app/src/main/AndroidManifest.xml
+++ b/OPSC7311POE/app/src/main/AndroidManifest.xml
@@ -13,18 +13,20 @@
         android:theme="@style/Theme.OPSC7311POE"
         tools:targetApi="31">
         <activity
+            android:name=".enterTimeSheet"
+            android:exported="false" />
+        <activity
             android:name=".create_category"
             android:exported="false" />
         <activity
             android:name=".ViewData"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".view_graphs"
             android:exported="false" />
         <activity
             android:name=".StartingPage"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
