--- a/OPSC7311POE/gradle/libs.versions.toml
+++ b/OPSC7311POE/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ navigationFragmentKtx = "2.7.7"
 navigationUiKtx = "2.7.7"
 composeMaterial = "1.3.1"
 firebaseCommonKtx = "21.0.0"
+firebaseFirestoreKtx = "25.0.0"
 
 [libraries]
 ambilwarna = { module = "com.github.yukuku:ambilwarna", version.ref = "ambilwarna" }
@@ -45,6 +46,7 @@ androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navi
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
 firebase-common-ktx = { group = "com.google.firebase", name = "firebase-common-ktx", version.ref = "firebaseCommonKtx" }
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
