--- a/OPSC7311POE/local.properties
+++ b/OPSC7311POE/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 04 15:19:40 SAST 2024
-sdk.dir=C\:\\Users\\Sven\\AppData\\Local\\Android\\Sdk
+#Wed Jun 05 11:13:43 SAST 2024
+sdk.dir=C\:\\Users\\allan\\AppData\\Local\\Android\\Sdk
