--- a/OPSC7311POE/app/src/main/AndroidManifest.xml
+++ b/OPSC7311POE/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -48,6 +56,7 @@
         <activity android:name=".Profile_activity" />
         <activity android:name=".ViewTimeSheetEntry_activity" />
         <activity android:name=".InsertData_activity" />
+        <activity android:name=".ViewTasks_activity" />
     </application>
 
 </manifest>
